# p-stake

./: README.md
program/: Cargo.toml  Makefile
program/src/: entrypoint.rs  error.rs  lib.rs
program/src/instruction/: authorize.rs  deactivate.rs  deactivate_delinquent.rs  delegate.rs  initialize.rs  merge.rs  mod.rs  move_stake_lamports.rs  set_lockup.rs  split.rs  withdraw.rs
program/src/pinocchio_add/: clock.rs  epoch_rewards.rs  mod.rs  pubkey.rs  sysvar.rs
program/src/state/: authorized.rs  delegation.rs  lockup.rs  merge_kind.rs  meta.rs  mod.rs  pod.rs  stake.rs  stake_flags.rs  stake_history_entry.rs  stake_history_sysvar.rs  stake_state_v2.rs  vote_state.rs
program/tests/: interface.rs  program_test.rs  stake_instruction.rs
