[package]
name = "p-stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pinocchio = "=0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.213", features = ["derive"] }

[features]
logging = []

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
