[package]
name = "p-stake"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pinocchio = "=0.8.4"
pinocchio-log = "0.4.0"
pinocchio-pubkey = "0.2.4"

[dev-dependencies]
bincode = "1.3.3"
serde = { version = "1.0.213", features = ["derive"] }
assert_matches = "1.5.0"
arbitrary = { version = "1.4.1", features = ["derive"] }
mollusk-svm = { version = "=0.0.15", features = ["all-builtins"] }
# mollusk-svm = { version = "=0.1.5", features = ["all-builtins"] }
proptest = "1.6.0"
rand = "0.8.5"
solana-account = { version = "=2.1.10", features = ["bincode"] }
solana-program = "=2.1.10"
solana-program-test = "=2.1.10"
solana-program-runtime = "=2.1.10"
solana-config-program = "=2.1.10"
solana-vote-program = "=2.1.10"
solana-sdk = "=2.1.10"
solana-feature-set = "=2.1.10"
test-case = "=3.3.1"

[features]
logging = []

[lints.rust.unexpected_cfgs]
level = "warn"
priority = 0
check-cfg = ['cfg(target_os, values("solana"))']
